--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-PORT=5000
-DBKEY=tt2wDfO9wpFNya9d
-DBUSER=aladdin
-DBHOST=@cluster0-ljyur.mongodb.net
-DBNAME=aladdin
-ACCESS_TOKEN_SECRET=aladdin
+SHOPIFY_API_KEY='51aaf62b949ace2ecbb2ca59efa80565'
+SHOPIFY_API_SECRET_KEY='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'
+HOST='https://1fb1b04197d6.ngrok.io'
+PORT=3000
