--- a/package.json
+++ b/package.json
@@ -1,44 +1,31 @@
 {
-  "name": "techardik-dropshipper",
+  "name": "dropshipper-v1",
   "version": "1.0.0",
-  "description": "techardik-dropshipper back end fordrop shipper app",
+  "description": "",
+  "main": "index.js",
   "engines": {
-    "node": "12.x"
+    "node": "12.16.1",
+    "npm": "6.13.4"
   },
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node index.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node index.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "debug": "^4.1.1",
+    "@shopify/koa-shopify-auth": "^3.1.63",
+    "@shopify/polaris": "^4.25.0",
+    "@zeit/next-css": "^1.0.1",
     "dotenv": "^8.2.0",
-    "express": "^4.15.2",
-    "express-jwt": "^5.3.3",
-    "express-jwt-permissions": "^1.3.3",
-    "express-session": "^1.17.1",
-    "http-errors": "^1.7.3",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^2.2.0",
-    "mongoose": "^5.9.14",
-    "morgan": "^1.10.0",
-    "node-fetch": "^2.6.0",
-    "passport": "^0.4.1",
-    "passport-http": "^0.3.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "stripe": "^8.52.0",
-    "unique-names-generator": "^4.2.0"
-  },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kuldeepsinghsekhon/techardik-dropshipper.git"
-  },
-  "author": "kuldeep singh sekhon",
-  "license": "ISC"
+    "isomorphic-fetch": "^2.2.1",
+    "koa": "^2.12.0",
+    "koa-session": "^6.0.0",
+    "next": "^9.4.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  }
 }
