--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "store-js": "^2.0.4"
   }
 }
