package koa approxi

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SHOPIFY_API_KEY='51aaf62b949ace2ecbb2ca59efa80565'
 SHOPIFY_API_SECRET_KEY='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'
-HOST='https://1fb1b04197d6.ngrok.io'
+HOST='https://dropshipper-v1.herokuapp.com'
 PORT=3000
