--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "koa": "^2.12.0",
     "koa-router": "^9.0.1",
     "koa-session": "^6.0.0",
+    "mongoose": "^5.9.18",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
